# card2vec

./: .gitignore  README.md  pyproject.toml
card2vec/: utils.py
card2vec/cards/: embeddings.py  load.py  search.py  test.py  text.py
card2vec/scripts/: create_embeddings.py  download_from_scryfall.py  get_similar_cards.py
